[package]
name = "plex-transmission-throttler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
transmission-rpc = "0.4.2"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
serde_json = { version = "1.0.111", features = [] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
mime = "0.3.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1.0"
serde = { version = "1.0.195", features = ["derive"] }
serde-enum-str = "0.4.0"
strum = { version = "0.25.0", features = ["derive"]}
axum-extra = "0.9.1"
thiserror = "1.0.56"
