[tool.poetry]
name = "plex-transmission-throttler"
version = "0.1.0"
description = "Toggles Transmission alt speed when Plex is streaming on WAN"
authors = ["Philippe Rivest <philippe@rive.st>"]

[tool.poetry.dependencies]
python = "^3.11"
transmission-rpc = "^7.0.3"
sanic = "^23.12.0"
sanic-ext = "^23.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
